--- a/public/static/plugs/lay-module/tableData/tableData.html
+++ b/public/static/plugs/lay-module/tableData/tableData.html
@@ -1,5 +1,5 @@
-<div class="table-data-container">
-    <input type="hidden" :name="setting.name" :value="value">
+<div class="table-data-container" ref="tableData">
+    <input type="hidden" :name="setting.name" :value="value" :lay-verify="setting.required == 1?'required':''">
     <div class="layui-input" @click="openSelectPage">
         <div class="placeholder" v-if="listSelected.length == 0">{{setting.placeholder}}</div>
         <div class="layui-btn layui-btn-xs layui-btn-normal" v-for="(itemSelect,indexSelect) in listSelected">
