增加重置按钮

--- a/public/static/plugs/lay-module/propertyInput/propertyInput.html
+++ b/public/static/plugs/lay-module/propertyInput/propertyInput.html
@@ -15,7 +15,8 @@
             </div>
         </div>
         <div class="input-item" slot="footer">
-            <div class="layui-btn layui-btn-primary" @click="onAddItem"><i class="layui-icon layui-icon-add-1"></i></div>
+            <div class="layui-btn layui-btn-primary" @click="onAddItem" title="增加"><i class="layui-icon layui-icon-add-1"></i></div>
+            <div class="layui-btn layui-btn-primary" @click="onResetItem" title="重置"><i class="layui-icon layui-icon-refresh"></i></div>
         </div>
     </draggable>
 
